Remove unused header comp from database and added logs to gitignore